<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".MainActivity">

<HorizontalScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadeScrollbars="false"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="111dp"
        tools:layout_editor_absoluteY="0dp">

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="93dp"
            tools:layout_editor_absoluteY="2dp"
            android:orientation="vertical">

            <TableRow
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/ok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/serial"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/name"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/customerPhone"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/customerSex"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textSize="20sp"
                    android:text="@string/csStatus" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/label"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textSize="20sp"
                    android:text="@string/proAddress" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/projectName"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/csUpdateTime"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/tradeprotectTime"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/protectendTime"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/assignUserName"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"

                    android:text="@string/adviserName"
                    android:textSize="20sp" />

            </TableRow>

        </TableLayout>
    </ScrollView>
</HorizontalScrollView>


</android.support.constraint.ConstraintLayout>